--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,11 +116,13 @@ p {
 .padding-top-10{padding-top: 10px;}
 .padding-top-30{padding-top: 30px;}
 .padding-bottom-30{padding-bottom: 30px;}
+.pd-5{padding: 5px;}
 .pd-10{padding: 10px;}
 .pd-20{padding: 20px;}
 .pd-ltr-20{padding: 20px 20px 0;}
 .pd-30{padding: 30px;}
 .pb-20{padding-bottom: 20px;}
+.pb-30{padding-bottom: 30px;}
 .pt-10{padding-top: 10px;}
 .pt-20{padding-top: 20px;}
 .margin-5{margin: 5px;}
@@ -130,6 +132,8 @@ p {
 .mb-15{margin-bottom: 15px;}
 .mb-10{margin-bottom: 10px;}
 .mb-5{margin-bottom: 5px !important;}
+.mr-10{margin-right: 10px;}
+.mr-20{margin-right: 20px;}
 
 .font-30{font-size: 30px;}
 .font-24{font-size: 24px;}
@@ -405,6 +409,9 @@ textarea.form-control{
 }
 
 /*-------------------------------- datepicker style ----------------*/
+.datepicker{
+	z-index: 1060;
+}
 .datepicker--day-name{color: #0099ff;}
 .datepicker--nav-action path{stroke: #0099ff;}
 .datepicker--cell.-focus-, .datepicker--nav-title:hover, .datepicker--nav-action:hover{background: #def2ff; color: #0099ff;}
@@ -450,6 +457,9 @@ textarea.form-control{
 }
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before{
 	background-color: #00bcf2;
+}
+.custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before{
+	border: 2px solid rgba(0, 123, 255, 0);
 }
 
 .highcharts-legend-item .highcharts-graph {
@@ -1957,12 +1967,25 @@ textarea.form-control{
 	width: 160px;
 	height: 160px;
 	margin: 0 auto 15px;
+	position: relative;
+}
+.profile-photo .edit-avatar{
+	position: absolute;
+	right: -15px;
+	top: 0;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	font-size: 14px;
+	text-align: center;
+	-webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+	-moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
 	-webkit-border-radius: 100%;
 	-moz-border-radius: 100%;
 	border-radius: 100%;
-	overflow: hidden;
 }
-.profile-photo img{
+.profile-photo .avatar-photo{
 	-webkit-border-radius: 100%;
 	-moz-border-radius: 100%;
 	border-radius: 100%;
@@ -2013,7 +2036,6 @@ textarea.form-control{
 	font-weight: 500;
 }
 .profile-setting{
-	background: #def2ff;
 	height: 100%;
 }
 .profile-setting .container{
@@ -2034,6 +2056,80 @@ textarea.form-control{
 }
 .profile-setting .profile-edit-list .form-control{
 	font-weight: 400;
+}
+.task-title{
+	padding-bottom: 30px;
+}
+.task-title a{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.profile-task-wrap .container{
+	max-width: 800px;
+}
+.profile-task-list{
+}
+.profile-task-list ul li{
+	position: relative;
+	padding-left: 30px;
+	font-size: 18px;
+	line-height: 24px;
+	color: #263238;
+	margin-bottom: 25px;
+}
+.profile-task-list.close-tasks ul li{
+	color: #90a4ae;
+	text-decoration: line-through;
+}
+.profile-task-list ul li .task-type{
+	font-size: 16px;
+	color: #90a4ae;
+	font-weight: 500;
+}
+.profile-task-list ul li .task-assign{
+	font-size: 16px;
+	color: #90a4ae;
+	font-weight: 300;
+}
+.profile-task-list ul li .due-date{
+	display: inline-block;
+	padding-left: 10px;
+}
+.profile-task-list ul li .due-date:before{
+	content: "\f111";
+	font-family: "FontAwesome";
+	display: inline-block;
+	font-size: 8px;
+	vertical-align: middle;
+	margin-right: 8px;
+	opacity: 0.5;
+}
+.profile-task-list ul li .custom-control{
+	position: absolute;
+	left: 0;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+.profile-task-list ul li .custom-control-label {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+}
+.profile-task-list ul li .custom-control-label::before, .profile-task-list ul li .custom-control-label::after{
+	top: 50%;
+	margin-top: -12px;
+}
+.task-list-form > ul > li{
+	padding: 15px;
+	background: #e7eef0;
+}
+.task-list-form .form-control{
+	font-weight: 400;
+}
+.task-list-form textarea.form-control{
+	height: 80px;
 }
 /*==============================================================
 	Profile Page End
