--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2225,3 +2225,108 @@ textarea.form-control{
 /*==============================================================
 	Profile Page End
 ==============================================================*/
+
+.contact-directory-list > ul > li{
+	margin-bottom: 30px;
+}
+.contact-directory-box{
+	background: #ffffff;
+	min-height: 400px;
+	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+.contact-dire-info{
+	padding: 30px 25px 20px;
+}
+.contact-directory-box .contact-avatar span{
+	display: block;
+	margin: 0 auto 20px;
+	width: 150px;
+	height: 150px;
+	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	border-radius: 100%;
+	overflow: hidden;
+}
+.contact-directory-box .contact-avatar span img{
+-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	border-radius: 100%;
+}
+.contact-directory-box .contact-name{
+	padding-bottom: 20px;
+}
+.contact-directory-box .contact-name h4{
+	font-weight: 500;
+}
+.contact-directory-box .contact-name p{
+	margin-bottom: 2px;
+	color: #7f92a9;
+}
+.contact-directory-box .contact-skill{
+	padding-bottom: 20px;
+}
+.contact-directory-box .contact-skill .badge{
+	border: 1px solid #ced9ee;
+	font-weight: 500;
+	font-size: 16px;
+	padding: 7px 11px;
+	margin: 3px 0;
+}
+.contact-directory-box .contact-skill .badge.badge-primary{
+	background: #55a8fd;
+	border-color: #55a8fd;
+	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+.contact-directory-box .profile-sort-desc{
+	font-weight: 400;
+	color: #6f7c8d;
+}
+.contact-directory-box .view-contact a{
+	display: block;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: 600;
+	padding: 20px 5px;
+	letter-spacing: 0.050em;
+	position: relative;
+	-webkit-border-radius: 0px 0px 6px 6px;
+	-moz-border-radius: 0px 0px 6px 6px;
+	border-radius: 0px 0px 6px 6px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.contact-directory-box:hover .view-contact a{
+	background: #55a8fd;
+	color: #ffffff;
+}
+.contact-directory-box:hover .view-contact a:before{
+	opacity: 0;
+}
+.contact-directory-box .view-contact a:before{
+	content: "";
+	width: 80px;
+	height: 1px;
+	background: #6f7c8d;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	margin: 0 auto;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
