gulpfile changes & scroll issue solved

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -22,6 +22,7 @@
 	.device-usage-chart .width-50-p{width: 100%;}
 }
 @media (max-width: 767px){
+	.main-container{height: auto;}
 	.pre-loader{background-size: 43%;}
 	.xs-pd-20-10{padding: 20px 10px;}
 	.xs-mb-20{margin-bottom: 20px;}
