--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -512,6 +512,9 @@ textarea.form-control{
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+.select2-container--default.select2-container--focus .select2-selection--multiple{
+	border-color: #d4d4d4;
+}
 .select2-container--default .select2-selection--single .select2-selection__rendered{
 	line-height: 43px;
 }
@@ -528,6 +531,7 @@ textarea.form-control{
 }
 .select2-container--default .select2-selection--multiple{
 	min-height: 45px;
+	border-color: #d4d4d4;
 }
 .select2-container--default .select2-selection--multiple .select2-selection__rendered{
 	padding-top: 3px;
