forgot password page ui change

--- a/src/plugins/bootstrap/bootstrap.css
+++ b/src/plugins/bootstrap/bootstrap.css
@@ -2564,13 +2564,13 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #0069d9;
+  background-color: #1502bd;
   border-color: #0062cc;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #0069d9;
+  background-color: #1502bd;
   border-color: #0062cc;
   box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
 }
